* fix: improved sidebar size on mobile device

--- a/src/components/MenuIcon.css
+++ b/src/components/MenuIcon.css
@@ -6,8 +6,8 @@
 
 @media (max-width: 480px) {
     .menuicon-mobile {
-        padding: 0.8rem !important;
-        width: 3rem !important;
+        padding: 0.6rem !important;
+        width: 3.5rem !important;
         height: 3rem !important;
     }
 }
